--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,57 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="col-md-6 offset-md-3">
-    {% if user.is_authenticated %}
-        <h1>Hello World</h1>
-    {% else %}
-        <h1>Login</h1>
-        <br>
-        <form action="{% url 'home' %}" method="POST">
-            {% csrf_token %}
-            <form>
-                <div class="mb-3">
-                    <input type="text" class="form-control" name="username", placeholder="Username" required>
-                </div>
+        {% if user.is_authenticated %}
+
+            <table class="table table-striped table-hover table-bordered">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">Article</th>
+                    <th scope="col">Invoice Date</th>
+                    <th scope="col">quantity</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col">Payment Method</th>
+                    <th scope="col">Customer</th>
+                    <th scope="col">ID</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% if sales_invoices %}
+                    {% for sales_invoice in sales_invoices %}
+                        {% for article in articles %}
+                            <tr>
+                                <td>{{ article.name }}</td>
+                                <td>{{ sales_invoice.invoice_date }}</td>
+                                <td>{{ sales_invoice.quantity }}</td>
+                                <td>{{ sales_invoice.total_price }}</td>
+                                <td>{{ sales_invoice.payment_method }}</td>
+                                <td>{{ sales_invoice.customer }}</td>
+                                <td>{{ sales_invoice.id }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endfor %}
+
+                {% endif %}
+                </tbody>
+            </table>
+                {% else %}
+                <h1>Login</h1>
                 <br>
-                <div class="mb-3">
-                    <input type="password" class="form-control" name="password", placeholder="Password" required>
-                </div>
-                <br>
-                <button type="submit" class="btn btn-secondary">Login</button>
-            </form>
-        </form>
+                <form action="{% url 'home' %}" method="POST">
+                    {% csrf_token %}
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" name="username" , placeholder="Username" required>
+                        </div>
+                        <br>
+                        <div class="mb-3">
+                            <input type="password" class="form-control" name="password" , placeholder="Password"
+                                   required>
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-secondary">Login</button>
+                    </form>
+                </form>
+        {% endif %}
     </div>
-    {% endif %}
 {% endblock %}
