--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -1,16 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="col-md-6 offset-md-3">
-        <h1>Add Invoice</h1>
+        <h1>Add Customer</h1>
         <br>
-        <form method="POST" action="{% url 'add-invoice' %}">
+        <form method="POST" action="{% url 'add-customer' %}">
             {% csrf_token %}
             {{ form.as_p }}
             <br>
-            <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
             <button type="submit" class="btn btn-secondary">Create</button>
-
         </form>
     </div>
-
 {% endblock %}
