--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,31 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="col-md-6 offset-md-3">
-        <h1>Articles</h1>
+        <h1>Customers</h1>
 
 
     <table class="table table-striped table-hover table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">ID</th>
+                    <th scope="col">Email</th>
+                    <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody>
-                    {% if articles %}
-                    {% for article in articles %}
+                    {% if customers %}
+                    {% for customer in customers %}
                             <tr>
 
-                                <td>{{ article.name }}</td>
-                                <td>{{ article.price }}</td>
-                                <td><a href="{% url 'article' article.article_id %}">{{ article.article_id }}</a></td>
+                                <td>{{ customer.name }}</td>
+                                <td>{{ customer.email }}</td>
+                                <td><a href="{% url 'customer' customer.customer_id %}">{{ customer.customer_id }}</a></td>
                             </tr>
                     {% endfor %}
                     {% endif %}
                 </tbody>
             </table>
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
-    <a href="{% url 'add-article' %}" class="btn btn-secondary">Add Article</a>
+    <a href="{% url 'add-customer' %}" class="btn btn-secondary">Add Customer</a>
     </div>
 {% endblock %}
