--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,7 @@
                     {% endif %}
                 </tbody>
             </table>
+                <a href="{% url 'add-invoice' %}" class="btn btn-secondary">Add Invoice</a>
                 {% else %}
                 <h1>Login</h1>
                 <br>
